challenge/week05/day32/backup/back.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: back
  name: back
#  namespace: default
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
      protocol: TCP
