challenge/week05/day32/backup/db.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: db
  name: db
#  namespace: default
spec:
  containers:
  - env:
    - name: MYSQL_ROOT_PASSWORD
      value: password
    image: mysql
    name: mysql
    ports:
    - containerPort: 3306
      protocol: TCP
