challenge/week05/day32/backup/front.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: front
  name: front
#  namespace: default
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
      protocol: TCP
