challenge/week05/day32/backup/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: hello
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
