challenge/week05/day32/backup/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
#  namespace: default
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    name: db
