challenge/week05/day32/backup/np-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
#  namespace: default
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: tester1
    ports:
    - port: 80
      protocol: TCP
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
